backoffice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backoffice-app
  template:
    metadata:
      labels:
        app: backoffice-app
    spec:
      containers:
      - name: backoffice-app
        image: mariam1212121121/pfebackoff:latest
        stdin: true
        tty: true
        ports:
            - containerPort: 4000
