back-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: back-app
  ports:
  - protocol: "TCP"
    port: 3000
    targetPort: 3000
  type: ClusterIP
