backoffice-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backoffice
spec:
  selector:
    app: backoffice-app
  ports:
  - protocol: "TCP"
    port: 4000
    targetPort: 4000
  type: ClusterIP
