front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: front-app
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: ClusterIP
