ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /b
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
  - http:
      paths:
      - path: /front
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /backof
        pathType: Prefix
        backend:
          service:
            name: backoffice
            port:
              number: 80
      - path: /back
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000
      
      - path: /mongo
        pathType: Prefix
        backend:
          service:
            name: mongodb-service
            port:
              number: 27017
